done i grinded all of it